# moldata

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
examples/: download_crossdocking.py  download_pdb.py  download_pdbbind.py  enrich_manifest.py  query_kinases_minio.py  query_structures.py
moldata/: cli.py  config.py
moldata/core/: download_utils.py  logging_utils.py  manifest.py  splits.py  storage.py  upload_utils.py
moldata/datasets/: __init__.py  base.py  crossdocking.py  pdb.py  pdbbind.py
moldata/parsers/: __init__.py  base.py  dataset.py  enrich.py  mmcif.py  pdb_format.py
moldata/query/: __init__.py  collections.py  minio_query.py  rcsb_search.py
moldata/rcsb/: __init__.py  client.py  data_api.py
tests/: __init__.py  test_datasets.py  test_download_utils.py  test_parsers_enrich.py  test_parsers_mmcif.py  test_parsers_structure.py  test_query.py  test_rcsb_client.py  test_storage.py  test_upload_utils.py
tests/fixtures/: sample.cif
